--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ html{
   color: rgb(52, 29, 1);
 }
 
-.links{
+/* .links{
   margin: 0;
   padding: 0;
   width: 100%;
@@ -107,12 +107,12 @@ html{
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  
   align-items: flex-end;
   gap: 0px;
   font-family: -apple-system, Roboto, 'Helvetica Neue', sans-serif;
   font-weight: 500;
-  font-size: 14pt;
+  font-size: 20pt;
   letter-spacing: 1pt;
   line-height: 0pt;
-}
+} */
